# CG_API_Learning

./: .gitignore  .gitmodules  README.md
OpenGL_learning/: ARCHITECTURE.md  CMakeLists.txt  README.md  history.json  imgui.ini  performance_log.txt
OpenGL_learning/assets/: .asset_registry
OpenGL_learning/assets/scenes/: scene.glscene
OpenGL_learning/assets/shaders/: billboard.glsl  bloom_downsample.glsl  bloom_prefilter.glsl  bloom_upsample.glsl  brdf.glsl  deferred_lighting.glsl  depth_debug_fragment.glsl  depth_prepass.glsl  fluid_blur.glsl  fluid_color.glsl  fluid_depth.glsl  fluid_depth_emitter.glsl  fluid_normal.glsl  fluid_particle_debug.glsl  fluid_shade.glsl  framebuffer_frag.glsl  framebuffer_vertex.glsl  gbuffer.glsl  grass_fragment.glsl  grass_vertex.glsl  grid.glsl  grid_fragment.glsl  grid_vertex.glsl  gtao.glsl  gtao_denoise.glsl  hiz_build.glsl  lamp_fragment.glsl  light_fragment.glsl  light_vertex.glsl  lit.glsl  model.glsl  model_loading_frag.glsl  model_loading_vertex.glsl  particle_compact.glsl  particle_emit.glsl  particle_render.glsl  particle_update.glsl  pbr.glsl  point_shadow.glsl  quad2d.glsl  (+15 more)
OpenGL_learning/assets/shaders/ibl/: brdf_lut.glsl  equirect_to_cubemap.glsl  irradiance.glsl  prefilter.glsl
OpenGL_learning/assets/shaders/physics/: apply_delta.glsl  delta_pos.glsl  density_lambda.glsl  emit.glsl  emitter_integrate.glsl  hash_assign.glsl  hash_clear.glsl  hash_count.glsl  hash_prefix_block.glsl  hash_prefix_final.glsl  hash_prefix_inner.glsl  integrate.glsl  neighbor_search.glsl  recycle.glsl  scene_collision.glsl  translate.glsl  velocity_update.glsl  vorticity.glsl  xsph_viscosity.glsl
OpenGL_learning/asssets/shaders/: test_fragment.glsl  test_vertex.glsl
OpenGL_learning/src/: Camera.h  Grid.h  Loader.h  Mesh.cpp  Mesh.h  Renderer.h  Shader.cpp  Shader.h  editor_main.cpp  imgui_layer.h  main.cpp
OpenGL_learning/src/app/: SandboxApp.cpp  SandboxApp.h
OpenGL_learning/src/asset/: Asset.h  AssetHandle.h  AssetManager.cpp  AssetManager.h  AssetTypes.h  AssimpMeshImporter.cpp  AssimpMeshImporter.h  MaterialAsset.cpp  MaterialAsset.h
OpenGL_learning/src/core/: AABB.cpp  AABB.h  Application.cpp  Application.h  Frustum.h  Input.cpp  Input.h  Ref.h  Timer.h  UUID.cpp  UUID.h  Window.cpp  Window.h
OpenGL_learning/src/editor/: Editor.cpp  Editor.h  EditorApp.cpp  EditorApp.h  EditorContext.h
OpenGL_learning/src/editor/panels/: AssetBrowserPanel.cpp  AssetBrowserPanel.h  ConsolePanel.cpp  ConsolePanel.h  GPUProfilerPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  Panel.h  PrimitivesPanel.cpp  PrimitivesPanel.h  SettingsPanel.cpp  SettingsPanel.h  ViewportPanel.cpp  ViewportPanel.h
OpenGL_learning/src/graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  ComputePipeline.cpp  ComputePipeline.h  Framebuffer.cpp  Framebuffer.h  GBuffer.cpp  GBuffer.h  IBLProcessor.cpp  IBLProcessor.h  Mesh.h  MeshFactory.cpp  MeshFactory.h  MeshSource.cpp  MeshSource.h  PointShadowMapArray.cpp  PointShadowMapArray.h  PrimitiveData.cpp  PrimitiveData.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h  StaticMesh.cpp  StaticMesh.h  StorageBuffer.cpp  StorageBuffer.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h
OpenGL_learning/src/physics/: EmitterFluidSimulation.cpp  EmitterFluidSimulation.h  FluidSimulation.cpp  FluidSimulation.h  PhysicsSystem.h  PhysicsWorld.cpp  PhysicsWorld.h
OpenGL_learning/src/renderer/: Environment.h  GPUProfiler.h  IBLProcessor.cpp  IBLProcessor.h  Material.cpp  Material.h  ParticleSystem.cpp  ParticleSystem.h  RenderCommand.cpp  RenderCommand.h  RenderPass.h  RenderTypes.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  SceneRenderer.cpp  SceneRenderer.h
OpenGL_learning/src/scene/: BVH.cpp  BVH.h  Entity.cpp  Entity.h  Grid.cpp  Grid.h  Light.h  Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  Transform.cpp  Transform.h
OpenGL_learning/src/scene/ecs/: Components.h  ECS.h  Entity.h  Systems.h  World.cpp  World.h
OpenGL_learning/src/ui/: EditorUI.cpp  EditorUI.h  ImGuiLayer.cpp  ImGuiLayer.h
OpenGL_learning/src/utils/: DDSLoader.h  GLCommon.h
vulkan_learning/: CMakeLists.txt  main.cpp
